--- a/my-app/src/components/Navigation/Navagation.css
+++ b/my-app/src/components/Navigation/Navagation.css
@@ -1,60 +1,328 @@
 .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 80px;
-    padding: 0 80px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.5);
-  }
-  
-  .nav__logo {
-    display: flex;
-    align-items: center;
-  }
-  
-  .nav__profile {
-    display: flex;
-    align-items: center;
-    gap: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 80px;
+  padding: 0 80px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.5);
+}
+
+.nav__menu-button {
+  display: none;
+}
+
+.nav__logo {
+  font-family: "Roboto Slab", "Times New Roman", serif;
+  font-weight: 700;
+  font-size: 20px;
+  color: white;
+  margin: 0;
+  text-decoration: none;
+}
+
+.nav__link {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  color: white;
+  text-decoration: none;
+  padding: 30px 9px 26px;
+}
+
+.nav__links {
+  display: flex;
+}
+
+.nav__link_active {
+  border-bottom: 3px solid white;
+}
+
+/* .nav__button {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  border-radius: 100px;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  width: 176px;
+  padding: 12px 0;
+  margin: 19px 0 13px 42px;
+}
+
+.nav__button:hover {
+  cursor: pointer;
+} */
+
+
+
+.nav__button-loggedin {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 100px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #1a1b22;
+  padding: 12px 19px;
+  margin: 14px 0 13px 64px;
+}
+
+.nav__button-loggedin:hover {
+  cursor: pointer;
+}
+
+.nav__username-loggedin {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  margin: 0;
+  color: #fff;
+}
+
+.nav__logout {
+  width: 24px;
+  height: 24px;
+  margin-left: 15px;
+}
+
+.nav__link-news {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  color: white;
+  text-decoration: none;
+  padding: 30px 0 26px;
+  margin-left: 66px;
+  color: #b6bcbf;
+}
+
+.nav__link-news:hover {
+  cursor: pointer;
+}
+
+/* --------------------- Styles for saved-news page nav --------------------- */
+
+.nav__savednews {
+  padding: 0 80px;
+  border-bottom: 1px solid rgb(209, 210, 214);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav__savednews-logo {
+  margin: 0;
+  text-decoration: none;
+}
+
+.nav__savednews-menu-button {
+  display: none;
+}
+
+.nav__savednews-links {
+  display: flex;
+}
+
+.nav__savednews-link {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  color: #1a1b22;
+  text-decoration: none;
+  padding: 30px 32px 26px;
+  margin-left: 12px;
+}
+
+.nav__savednews-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  border-radius: 100px;
+  border: 1px solid #1a1b22;
+  background-color: transparent;
+  color: #1a1b22;
+  padding: 12px 19px;
+  margin: 14px 0 13px 42px;
+}
+
+.nav__savednews-button:hover {
+  cursor: pointer;
+}
+
+.nav__savednews-link_active {
+  border-bottom: 3px solid #1a1b22;
+}
+
+.nav__savednews-username {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  margin: 0;
+}
+
+.nav__savednews-logout {
+  margin-left: 15px;
+}
+
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    width: 1232px;
+    margin: 0 auto;
+    padding: 0;
   }
 
-  .nav__home-btn{
-    background: none;
+  .nav-savednews {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .nav {
+    padding: 0 40px;
+  }
+
+  .nav__link {
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 22px 3px 20px;
+    align-self: center;
+  }
+
+  .nav__button {
+    margin: 14px 0 12px 16px;
+    padding: 0;
+    font-size: 16px;
+    width: 152px;
+    height: 40px;
+    line-height: 1.3;
+  }
+
+  .nav__link-news {
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 22px 3px 20px;
+    margin-left: 16px;
+    align-self: center;
+  }
+
+  .nav__button-loggedin {
+    padding: 12px 19px;
+    margin: 14px 0 12px 16px;
+  }
+
+  .nav__username-loggedin {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .nav__savednews {
+    padding: 0 40px;
+  }
+
+  .nav__savednews-link {
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 22px 0 20px;
+    align-self: center;
+  }
+
+  .nav__savednews-button {
+    padding: 12px 19px;
+    margin: 14px 0 12px 16px;
+  }
+
+  .nav__link-news {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .nav__savednews-link_active {
+    padding: 22px 28px 20px;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 521px) and (max-width: 600px) {
+  .nav__savednews-link_active {
+    padding: 22px 10px 20px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .nav {
+    padding: 16px;
+  }
+
+  .nav_menu-open {
+    background-color: #1a1b22;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .nav__logo_hidden {
+    display: none;
+  }
+
+  .nav__menu-button {
+    display: flex;
     border: none;
+    width: 24px;
+    height: 24px;
+  }
+  .nav__menu-button:hover {
     cursor: pointer;
-    line-height: 24px;
-    font-size: 18px;
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 500;
-    color: white;
   }
 
-  .nav__saved-artcles-btn{
-    background: none;
-    border: none;
-    cursor: pointer;
-    line-height: 24px;
-    font-size: 18px;
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 500;
-    color: white;
+  .nav__menu-button_hidden {
+    display: none;
   }
 
-  .nav__profile-btn{
+  /* .nav__menu-button_open {
+    background: transparent url(../../images/close-icon.svg) center no-repeat;
+  } */
+
+  .nav__links {
+    display: none;
+  }
+
+  .nav__savednews {
+    padding: 16px;
+  }
+
+  .nav__savednews_open {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #fff;
+  }
+
+  .nav__button {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 48px;
-    height: 48px;
-    width: 112px;
-    border-color: white;
-    border-style: solid;
-    background: none;
-    cursor: pointer;
-    line-height: 24px;
-    font-size: 18px;
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 500;
-    color: white;
+    border: none;
+    width: 24px;
+    height: 24px;
   }
+
+  .nav__savednews-links {
+    display: none;
+  }
+}
