--- a/my-app/src/components/NewsCard/NewsCard.css
+++ b/my-app/src/components/NewsCard/NewsCard.css
@@ -7,7 +7,7 @@
   }
   
   .card__button-bookmark {
-    background: transparent url(../../images/bookmark-icon.svg) center no-repeat;
+    background: transparent url(../../images/normal-artmarker.svg) center no-repeat;
     width: 40px;
     height: 40px;
     border: none;
