--- a/my-app/src/components/ModalWithForm/ModalWithForm.css
+++ b/my-app/src/components/ModalWithForm/ModalWithForm.css
@@ -83,3 +83,23 @@
   display: flex;
   align-items: center;
 }
+
+.modal__error{
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  line-height: normal;
+  font-size: 12px;
+  color: #f00;
+  margin-top: 3px;
+  position: absolute;
+  top: 50px;
+}
+
+.modal__error-unavailable {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  line-height: normal;
+  font-size: 12px;
+  color: #f00;
+  margin: 0 auto;
+}
