--- a/my-app/src/components/NewsCard/NewsCard.css
+++ b/my-app/src/components/NewsCard/NewsCard.css
@@ -104,6 +104,55 @@
     text-overflow: ellipsis;
   }
 
+  .card__keyword {
+    font-family: "Roboto", Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.7;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 8px 22px;
+    text-align: center;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+  }
+  
+  .card__popup-text {
+    font-family: "Roboto", Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.7;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 8px 22px;
+    text-align: center;
+    position: absolute;
+    top: 24px;
+    right: 69px;
+  }
+  
+  .card__popup-text_hidden {
+    display: none;
+  }
+  
+  .card__button-delete {
+    background: #fff url(../../images/trash-icon.svg) center no-repeat;
+    width: 40px;
+    height: 40px;
+    border: none;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border-radius: 8px;
+    padding: 8px;
+  }
+  
+  .card__button-delete:hover {
+    background: #fff url(../../images/trash-icon-hover.svg) center no-repeat;
+    cursor: pointer;
+  }
+
   @media screen and (max-width: 980px) {
     .card {
       width: 224px;
