--- a/my-app/src/components/NewsCardList/NewsCardList.css
+++ b/my-app/src/components/NewsCardList/NewsCardList.css
@@ -1,224 +1,100 @@
-.card {
-    width: 400px;
-    height: 576px;
-    position: relative;
-    display: flex;
+.newscards {
+  padding: 80px 104px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.newscards__title {
+  font-family: "Roboto Slab", "Times New Roman", serif;
+  font-weight: 400;
+  font-size: 40px;
+  color: rgb(26, 27, 34);
+  margin: 0;
+  margin-bottom: 64px;
+}
+
+.newscards__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.newscards__button {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 20px 0;
+  width: 288px;
+  border: none;
+  border-radius: 80px;
+  margin: 64px auto 0;
+  background-color: #fff;
+}
+
+.newscards__button_hidden {
+  display: none;
+}
+
+.newscards__button:hover {
+  background-color: #e8e8e8;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1440px) {
+  .newscards {
+    width: 1232px;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  .newscards {
+    padding: 40px;
+  }
+
+  .newscards__title {
+    margin-bottom: 32px;
+    font-size: 30px;
+  }
+
+  .newscards__container {
+    gap: 8px;
+  }
+
+  .newscards__button {
+    margin: 32px auto 0;
+    padding: 16px 0;
+    width: 240px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .newscards {
+    padding: 32px 16px 24px;
+  }
+
+  .newscards__title {
+    margin-bottom: 58px;
+  }
+
+  .newscards__container {
+    gap: 10px;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
   }
-  
-  .card__button-bookmark {
-    /* background: transparent url(../../images/bookmark-icon.svg) center no-repeat; */
-    width: 40px;
-    height: 40px;
-    border: none;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    border-radius: 8px;
-    padding: 8px;
+
+  .newscards__button {
+    margin: 21px auto 0;
+    width: 288px;
   }
-  
-  .card__button-bookmark:hover {
-    /* background: transparent url(../../images/bookmark-icon-hover.svg) center
-      no-repeat; */
-    cursor: pointer;
-  }
-  
-  /* .card__button-bookmark_marked {
-    background: transparent url(../../images/bookmark-icon-clicked.svg) center
-      no-repeat;
-  } */
-  
-  .card__button-bookmark_marked:hover {
-    /* background: transparent url(../../images/bookmark-icon-clicked.svg) center
-      no-repeat; */
-    cursor: pointer;
-  }
-  
-  .card__image {
-    border-radius: 16px 16px 0 0;
-    width: 100%;
-    object-fit: cover;
-    flex: 1 0 272px;
-    overflow: hidden;
-  }
-  
-  .card__description {
-    background-color: #fff;
-    border-radius: 0 0 16px 16px;
-    padding: 0 24px 24px;
-    height: 304px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-  }
-  
-  .card__date {
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.3;
-    color: #b6bcbf;
-    margin: 20px 0 12px;
-  }
-  
-  .card__title {
-    font-family: "Roboto Slab", "Times New Roman", serif;
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 1.2;
-    max-height: 60px;
-    color: #1a1b22;
-    margin: 0;
-    margin-bottom: 16px;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  .card__text {
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.4;
-    color: #1a1b22;
-    margin: 0;
-    display: -webkit-box;
-    -webkit-line-clamp: 5;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  .card__source {
-    font-family: "Roboto Slab", "Times New Roman", serif;
-    font-weight: 700;
-    font-size: 16px;
-    color: #b6bcbf;
-    margin: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  .card__keyword {
-    font-family: "Roboto", Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.7;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 8px 22px;
+}
+
+@media screen and (min-width: 521px) and (max-width: 540px) {
+  .newscards__title {
     text-align: center;
-    position: absolute;
-    top: 24px;
-    left: 24px;
   }
-  
-  .card__popup-text {
-    font-family: "Roboto", Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.7;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 8px 22px;
-    text-align: center;
-    position: absolute;
-    top: 24px;
-    right: 69px;
-  }
-  
-  .card__popup-text_hidden {
-    display: none;
-  }
-  
-  .card__button-delete {
-    background: #fff url(../../images/trash-icon.svg) center no-repeat;
-    width: 40px;
-    height: 40px;
-    border: none;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    border-radius: 8px;
-    padding: 8px;
-  }
-  
-  .card__button-delete:hover {
-    background: #fff url(../../images/trash-icon-hover.svg) center no-repeat;
-    cursor: pointer;
-  }
-  
-  @media screen and (max-width: 980px) {
-    .card {
-      width: 224px;
-      max-height: 420px;
-    }
-  
-    .card__button-bookmark {
-      top: 8px;
-      right: 8px;
-    }
-  
-    .card__image {
-      flex: 1 0 150px;
-    }
-  
-    .card__description {
-      padding: 16px;
-      height: 270px;
-    }
-  
-    .card__date {
-      margin: 0 0 12px;
-    }
-  
-    .card__title {
-      font-size: 22px;
-      line-height: 1;
-      margin-bottom: 10px;
-      max-height: 72px;
-    }
-  
-    .card__text {
-      -webkit-line-clamp: 4;
-      max-height: 88px;
-    }
-  }
-  
-  @media screen and (max-width: 520px) {
-    .card {
-      width: 288px;
-      height: 440px;
-    }
-  
-    .card__button-bookmark {
-      top: 16px;
-      right: 16px;
-    }
-  
-    .card__image {
-      height: 196px;
-    }
-  
-    .card__description {
-      height: 244px;
-      box-sizing: border-box;
-    }
-  
-    .card__date {
-      margin-bottom: 10px;
-    }
-  
-    .card__title {
-      margin-bottom: 14px;
-    }
-  
-    .card__text {
-      margin-bottom: 8px;
-    }
-  }
+}
