--- a/my-app/src/components/Navigation/Navagation.css
+++ b/my-app/src/components/Navigation/Navagation.css
@@ -259,6 +259,7 @@
 @media screen and (max-width: 520px) {
   .nav {
     padding: 16px;
+    margin-top:25px ;
   }
 
   .nav__menu-open {
@@ -276,10 +277,12 @@
   }
 
   .nav__menu-button {
-    display: flex;
-    border: none;
-    width: 24px;
-    height: 24px;
+      display: flex;
+      background: transparent url(../../images/menu-white.svg) center
+        no-repeat;
+      border: none;
+      width: 24px;
+      height: 24px;
   }
   .nav__menu-button:hover {
     cursor: pointer;
@@ -320,5 +323,14 @@
 
   .nav__savednews-links {
     display: none;
+  }
+
+  .nav__savednews-menu-button{
+    display: flex;
+    background: transparent url(../../images/menu-black.svg) center
+      no-repeat;
+    border: none;
+    width: 24px;
+    height: 24px;
   }
 }
