--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -25,64 +25,66 @@
   font-size: 60px;
   font-family: "Roboto Slab", Arial, sans-serif;
   font-weight: 400;
+  font-size: 60px;
   color: white;
   margin: 0;
-  padding-top: 80px;
-  line-height: 1;
+  padding-top: 20px;
+  line-height: 64px;
   margin: 0 0 32px;
+  max-width: 608px;
 }
 
 .header__title-des {
   display: flex;
-  width: 608px;
+  max-width: 608px;
   font-size: 18px;
   font-family: "Roboto", Arial, sans-serif;
   font-weight: 400;
   color: white;
-  /* padding-top: 32px;
-  padding-bottom: 60px; */
-  line-height: 1.3;
+  line-height: 24px;
   margin: 0 0 88px;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 768px) {
   .header {
     max-height: 400px;
   }
 
   .header__search {
-    /* margin: 38px auto 48px; */
-    max-width: 448px;
+    max-width: 452px;
   }
   .header__title {
     font-size: 36px;
+    line-height: 40px;
     margin-bottom: 16px;
+    max-width: 385px;
   }
 
   .header__title-des {
     font-size: 18px;
+    line-height: 24px;
     margin-bottom: 48px;
+    max-width: 452px;
   }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 320px) {
   .header {
     max-height: 536px;
   }
   .header__search {
     display: flex;
     flex-direction: column;
-    /* margin: 30px auto 32px; */
     max-width: 288px;
   }
 
   .header__title {
     font-size: 36px;
     margin-bottom: 16px;
-    max-width: 288px;
+    max-width: 285px;
   }
 
   .header__title-des {
-    max-width: 288px;
+    max-width: 285px;
   }
 }
