--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -24,4 +24,6 @@
     border: 0;
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 1);
+    padding-bottom: 10px;
+    margin-bottom: 30px;
   }
