--- a/my-app/src/components/ModalWithForm/ModalWithForm.css
+++ b/my-app/src/components/ModalWithForm/ModalWithForm.css
@@ -105,3 +105,82 @@
   color: #f00;
   margin: 0 auto;
 }
+.modal__form-content {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 32px;
+}
+.modal__input-title {
+  color: #000;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15px;
+  color:#2F71E5;
+  margin-top: 24px;
+  margin-bottom: 8px;
+}
+
+.modal__input {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  border: 0;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 520px) {
+  .modal__content {
+    max-width: 320px;
+    height: 100vh;
+    width: 100%;
+    padding: 0;
+    top: 56px;
+  }
+
+  .modal__close-button {
+    top: -32px;
+    right: 16px;
+    width: 16px;
+    height: 16px;
+  }
+
+  .modal__header {
+    padding: 16px;
+  }
+
+  .modal__form-content {
+    padding: 0 16px 32px 16px;
+  }
+
+  .modal__submit-button {
+    margin: 11px 15px 16px;
+    width: 288px;
+    height: 64px;
+  }
+
+  .modal__input-title {
+    margin-bottom: 0;
+    margin-top: 18px;
+  }
+
+  .modal__input {
+    margin-bottom: 12px;
+    padding: 8px 0;
+    width: 100%;
+    border: none;
+    border-bottom: solid 1px rgba(0, 0, 0, 1);
+  }
+
+  .modal__error {
+    top: 66px;
+  }
+
+  .modal__error-unavailable {
+    margin-top: 10px;
+  }
+}
