media dimensions news card and modals

--- a/my-app/src/components/NewsCard/NewsCard.css
+++ b/my-app/src/components/NewsCard/NewsCard.css
@@ -217,6 +217,7 @@
     .card__title {
       margin-bottom: 14px;
       max-height: 48px;
+      -webkit-line-clamp: 2;
     }
   
     .card__text {
