--- a/my-app/src/components/SuccessModal/SuccessModal.css
+++ b/my-app/src/components/SuccessModal/SuccessModal.css
@@ -1,21 +1,24 @@
-.modal__title-success{
-    font-family: "Roboto", Arial, sans-serif;
-    font-weight: 900;
-    font-size: 24px;
-    margin: 0;
-    padding-bottom: 14px;
+.modal__title-success {
+  font-family: "Roboto", Arial, sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  margin: 0;
+  padding-bottom: 14px;
+  max-width: 315px;
 }
 
-.modal__button-success{
-    font-family: "Inter", Arial, sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    border: none;
-    background-color: transparent;
-    color: #2f71e5;
-    padding: 0;
+.modal__button-success {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  border: none;
+  background-color: transparent;
+  color: #2f71e5;
+  padding: 0;
 }
 
 .modal__button-success:hover {
-    cursor: pointer;
-  }
+  cursor: pointer;
+}
+
+
